[package]
name = "anthropic-api"
version = "0.1.0"
description = "A Polywrap Wasm wrap for the Anthropic API"
authors = ["Polywrap"]
repository = "https://github.com/krisbitney/anthropic-api"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "~0.10.3" }
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
